--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,14 +13,14 @@
   <link rel="stylesheet" href="vendors/angular-material.min.css">
 
   <script type="text/javascript" src="scripts/client.js"></script>
-  <script type="text/javascript" src="scripts/controllers/info.controller.js"></script>
-  <script type="text/javascript" src="scripts/controllers/login.controller.js"></script>
-  <script type="text/javascript" src="scripts/controllers/user.controller.js"></script>
+  <script type="text/javascript" src="scripts/controllers/about.js"></script>
+  <script type="text/javascript" src="scripts/controllers/blog.js"></script>
+  <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
   <link rel="stylesheet" href="styles/style.css">
 
   <title>Zack Stout: get it son</title>
 </head>
-<body>
+<body ng-app='app'>
   <h1>hello</h1>
 </body>
 </html>
