--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="vendors/angular-material.min.css">
 
   <script type="text/javascript" src="scripts/client.js"></script>
+  <script src="scripts/controllers/nav.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/controllers/about.js"></script>
   <script type="text/javascript" src="scripts/controllers/blog.js"></script>
   <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
@@ -21,6 +22,10 @@
   <title>Zack Stout: get it son</title>
 </head>
 <body ng-app='app'>
-  <h1>hello</h1>
+  <!-- <h1>hello</h1> -->
+
+  <header ng-include="'/views/partials/header.html'"></header>
+<!-- <md-checkbox>Kickin it</md-checkbox> -->
+  <main ng-view></main>
 </body>
 </html>
