--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -8,3 +8,17 @@
   margin-top: 60px;
   margin-bottom: 60px;
 }
+
+.projectInfoContainer {
+
+}
+
+.projContainer {
+  padding: 20px;
+  margin: 15px;
+}
+
+.imageContainer {
+  height: 75px;
+  width: 75px;
+}
