--- a/server/public/views/templates/blog.html
+++ b/server/public/views/templates/blog.html
@@ -1,6 +1,20 @@
 
-<div ng-include="'views/partials/nav.html'"></div>
+<div layout="row">
+        <div layout="column" flex="15" ng-controller="NavController as nc">
 
+          <div >
+            <button ng-click="nc.goHome()">About Me</button>
+          </div>
+          <div >
+            <button ng-click="nc.goBlog()">Blog</button>
+          </div>
+          <div >
+            <button ng-click="nc.goPort()">Portfolio</button>
+          </div>
+        </div>
+        <div layout="column" flex="80">
 <h2>blog</h2>
 
 <canvas id="parabola" width="400" height="400"></canvas>
+</div>
+</div>
