ah if we don't flex it, that won't happen

--- a/server/public/views/templates/blog.html
+++ b/server/public/views/templates/blog.html
@@ -12,7 +12,7 @@
             <button ng-click="nc.goPort()">Portfolio</button>
           </div>
         </div>
-        <div layout="column" flex="80">
+        <div layout="column">
 <h2>blog</h2>
 
 <canvas id="parabola" width="400" height="400"></canvas>
