--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,6 +12,8 @@
   <script src="vendors/angular-messages.min.js" charset="utf-8"></script>
   <link rel="stylesheet" href="vendors/angular-material.min.css">
 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <script type="text/javascript" src="scripts/client.js"></script>
   <script src="scripts/controllers/nav.js" charset="utf-8"></script>
   <script type="text/javascript" src="scripts/controllers/about.js"></script>
