--- a/server/public/views/templates/portfolio.html
+++ b/server/public/views/templates/portfolio.html
@@ -3,14 +3,14 @@
 <div layout="row">
         <div layout="column" flex="15" ng-controller="NavController as nc">
 
-          <div >
-            <button ng-click="nc.goHome()">About Me</button>
+          <div class="sideNav">
+            <div class="clickMe" ng-click="nc.goHome()">About Me</div>
           </div>
-          <div >
-            <button ng-click="nc.goBlog()">Blog</button>
+          <div class="sideNav">
+            <div class="clickMe" ng-click="nc.goBlog()">Blog</div>
           </div>
-          <div >
-            <button ng-click="nc.goPort()">Portfolio</button>
+          <div class="sideNav">
+            <div class="clickMe" ng-click="nc.goPort()">Portfolio</div>
           </div>
         </div>
 
