really am having trouble understanding why adding in views (??) seems to break data-binding connection between input bar and controller

--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -45,9 +45,9 @@
   width: 75px;
 }
 
-#parabola, #parabolaBall {
-  width: 400px;
-  height: 400px;
+#parabola, #parabolaBall, #polygon {
+  width: 350px;
+  height: 350px;
 }
 
 .icon {
