--- a/server/public/views/templates/portfolio.html
+++ b/server/public/views/templates/portfolio.html
@@ -20,7 +20,14 @@
 <hr>
 Solo Project
 <hr>
+<div class="projContainer" layout="row">
+  <div class="imageContainer">
 
+  </div>
+  <div class="projectInfoContainer">
+    Github link: <a href="https://github.com/zackstout/world-weaver/tree/master/SOLO/WORLD%20WEAVER">Solo Project</a>
+  </div>
+</div>
 
 
 <hr>
