--- a/server/public/views/templates/about.html
+++ b/server/public/views/templates/about.html
@@ -35,7 +35,7 @@
       <div layout="column" flex="40">
         <div class="myPicContainer" layout layout-align="center center">
           <!-- <div layout="row"> -->
-            <img class="myPic" src="styles/zack.jpg">
+            <img class="myPic" src="styles/zzz.jpg">
           </div>
 
           <div layout="row" layout layout-align="center center">
@@ -44,17 +44,18 @@
                 <img class="icon" src="styles/github_icon.svg"></a>
             </div>
 
+            <canvas id="pendulum" width="200" height="200"></canvas>
+
             <div class="iconHolder">
               <a href="https://www.linkedin.com/in/zack-stout-001/">
                 <img class="icon" src="styles/linkedin_icon.png"></a>
             </div>
 
 
-            <canvas width="100" height="100"></canvas>
           </div>
 
-          <div layout="row">
-            <img class="icon" src="styles/gmail_icon2.ico"> zackstout.gmail.com
+          <div layout="row" layout layout-align="center center">
+            <img class="icon" src="styles/gmail_icon2.ico"> &emsp; zackstout.gmail.com
           </div>
 
         <!-- </div> -->
@@ -71,27 +72,7 @@
             On the other hand, a programmer must also decide which goals are worth pursuing. She must perceive, analyze and ultimately understand what she values, and consequencly which projects deserve her attention.
           </p>
 
-          <p>
-            Github: <a href="http://github.com/zackstout">
-              <img class="icon" src="styles/github_icon.svg"></a>
 
-            </p>
-
-            <p>
-              LinkedIn: <a href="https://www.linkedin.com/in/zack-stout-001/">
-                <img class="icon" src="styles/linkedin_icon.png"></a>
-
-
-              </p>
-
-              <p>
-                Email: zackstout@gmail.com
-                <img class="icon" src="styles/gmail_icon2.ico">
-              </p>
-
-              <p>
-                My other activities. A pitch. Quirky...?
-              </p>
     </div>
 
 
