--- a/server/public/views/templates/about.html
+++ b/server/public/views/templates/about.html
@@ -3,6 +3,7 @@
 <div layout="row">
   <div layout="column" flex="15" ng-controller="NavController as nc">
 
+  <div class="sideNavHolder">
     <div class="sideNav">
       <div class="clickMe" ng-click="nc.goHome()">About Me</div>
     </div>
@@ -12,6 +13,8 @@
     <div class="sideNav">
       <div class="clickMe" ng-click="nc.goPort()">Portfolio</div>
     </div>
+  </div>
+
   </div>
 
 
