--- a/server/public/views/templates/about.html
+++ b/server/public/views/templates/about.html
@@ -1,82 +1,113 @@
 
 <!-- <div ng-include="'views/partials/nav.html'"></div> -->
-<div layout="row">
+<div layout="row" class="wholeEnchilada">
   <div layout="column" flex="15" ng-controller="NavController as nc">
 
-  <div class="sideNavHolder">
-    <div class="sideNav">
-      <div class="clickMe" ng-click="nc.goHome()">About Me</div>
+    <div class="sideNavHolder">
+      <div class="sideNav">
+        <div class="clickMe alive" ng-click="nc.goHome()">About Me</div>
+      </div>
+      <div class="sideNav">
+        <div class="clickMe" ng-click="nc.goBlog()">Blog</div>
+      </div>
+      <div class="sideNav">
+        <div class="clickMe" ng-click="nc.goPort()">Portfolio</div>
+      </div>
     </div>
-    <div class="sideNav">
-      <div class="clickMe" ng-click="nc.goBlog()">Blog</div>
-    </div>
-    <div class="sideNav">
-      <div class="clickMe" ng-click="nc.goPort()">Portfolio</div>
-    </div>
-  </div>
 
   </div>
 
 
   <div layout="column" flex="80">
-    <h2>about</h2>
+
+    <!-- <h2>about</h2> -->
+
 
 
 
     <div layout="row">
 
-      <div layout="column" flex="50">
-        <p>
-          "A program is crystallized thought." -- Marijn Haverbeke, <emph>Eloquent Javascript</emph>, Ch. 8
-        </p>
+      <div layout="column" flex="65">
+        <div layout="row">
+          <div class="penHolder">
+            <canvas id="pendulum" width="250" height="200"></canvas>
 
-        <p>
-          "In imagining that there is a machine whose construction would enable it to think, to sense, and to have perception, one could conceive it enlarged while retaining the same proportions, so that one could enter into it, just like into a windmill. Supposing this, one should, when visiting within it, find only parts pushing one another, and never anything by which to explain a perception." --G. F. Leibniz
-        </p>
+          </div>
+
+
+          <div layout="column">
+            <div class="aboutMe">
+              <!-- <h1>About Me</h1> -->
+            </div>
+
+            <p class="quote">
+              "A program is crystallized thought."
+            </p>
+            <p class="name">&mdash;Marijn Haverbeke, <i>Eloquent Javascript</i>, Ch. 8
+            </p>
+
+            <p class="quote">
+              "Mathematics is the language in which God has written the universe."
+            </p>
+            <p class="name">&mdash;Galileo Galilei, <i>Il Saggiatore</i>
+            </p>
+          </div>
+
+        </div>
+
+
       </div>
 
-      <div layout="column" flex="40">
+      <div layout="column" flex="30">
         <div class="myPicContainer" layout layout-align="center center">
           <!-- <div layout="row"> -->
-            <img class="myPic" src="styles/zzz.jpg">
-          </div>
+          <img class="myPic" src="styles/zzz6.png">
+        </div>
 
-          <div layout="row" layout layout-align="center center">
-            <div class="iconHolder">
-              <a href="http://github.com/zackstout">
-                <img class="icon" src="styles/github_icon.svg"></a>
+        <div layout="column" layout layout-align="center center" class="textCont">
+          <div class="iconHolder" layout="row">
+            <a href="http://github.com/zackstout">
+              <img class="icon" src="styles/github_icon.svg"></a>
+              &emsp; <a class="linkText" href="http://github.com/zackstout"><span class="linkText">
+                <i>github.com/zackstout</i>
+              </span></a>
             </div>
 
-            <canvas id="pendulum" width="200" height="200"></canvas>
 
-            <div class="iconHolder">
+
+            <div class="iconHolder" layout="row">
               <a href="https://www.linkedin.com/in/zack-stout-001/">
                 <img class="icon" src="styles/linkedin_icon.png"></a>
+                &emsp; <a class="linkText" href="https://www.linkedin.com/in/zack-stout-001/"><span class="linkText">
+                  <i>linkedin.com/in/zack-stout-001</i>
+                </span></a>
+              </div>
+
+
             </div>
 
+            <div layout="row" class="emailCont" layout layout-align="center center">
+              <img class="icon" src="styles/gmail_icon2.ico"> &emsp; <i>zackstout@gmail.com</i>
+            </div>
 
+            <!-- </div> -->
+          </div>
+        </div>
+
+        <div layout="column">
+          <div class="description">
+            <p>
+              I'm a software development student at Prime Digital Academy, and I'm discovering to my delight that my background in mathematics and philosophy has positioned me to fall in love with computer programming.
+            </p>
           </div>
 
-          <div layout="row" layout layout-align="center center">
-            <img class="icon" src="styles/gmail_icon2.ico"> &emsp; zackstout.gmail.com
-          </div>
-
-        <!-- </div> -->
-      </div>
-    </div>
-
-    <div layout="column">
 
           <p>
-            These two quotes encapsulate my view of coding. On the one hand, a program is a carefully constructed list of instructions designed to achieve some end -- one has a goal in mind, and plans out the best way of achieving it.
-          </p>
 
-          <p>
-            On the other hand, a programmer must also decide which goals are worth pursuing. She must perceive, analyze and ultimately understand what she values, and consequencly which projects deserve her attention.
           </p>
 
 
-    </div>
+        </div>
 
 
       </div>
